tests/samples/extends-unexpected-child-expression/template.blate
// error: extends unexpected child expression
{@extends './path.to.file.blate' context}
	{@slot title} Title {/slot}
	{ expression }
{/extends}